<!--
  ~ The MIT License (MIT)
  ~ Copyright (c) 2015 xiaocong@gmail.com
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
  ~ EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
  ~ MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
  ~ IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
  ~ DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
  ~ OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE
  ~ OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<resources>
    <string name="app_name">ATX</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="monitor_service_ticker">Monitor service is running</string>
    <string name="monitor_service_title">UIAutomator Monitor</string>
    <string name="monitor_service_text">Monitor service is running</string>
    <string name="agent_die">:agent is die</string>
    <string name="agent_live">:agent is live</string>
    <string name="fast_input_label">FastInputIME</string>
    <string name="stop_atxagent">停止ATXAGENT</string>
    <string name="start_atxagent">启动ATXAGENT</string>
    <string name="stop_uiautomator">停止UIAutomator</string>
    <string name="start_uiautomator">启动UIAutomator</string>
    <string name="barrier_free">无障碍服务</string>
    <string name="develop_mode">开发者选项</string>
    <string name="shot_cut">快捷方式</string>
    <string name="identify">识别本机</string>
    <string name="quit">关闭所有服务</string>
    <string name="no_permission_tip">No permission to write sd card</string>
    <string name="atx_agent">ATX-Agent</string>
    <string name="avaible_internal_storage">内部存储:</string>
    <string name="avaible_sd_storage">SD卡:</string>
</resources>
